@@ -1,4 +1,4 @@
-/* $Id: iff.c,v 1.7 2003-10-04 03:14:47 btb Exp $ */
+/* $Id: iff.c,v 1.8 2004-08-01 16:28:33 schaffner Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -168,7 +168,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 #endif
 
 #ifdef RCS
-static char rcsid[] = "$Id: iff.c,v 1.7 2003-10-04 03:14:47 btb Exp $";
+static char rcsid[] = "$Id: iff.c,v 1.8 2004-08-01 16:28:33 schaffner Exp $";
 #endif
 
 #define COMPRESS		1	//do the RLE or not? (for debugging mostly)
@@ -770,7 +770,7 @@ int convert_ilbm_to_pbm(iff_bitmap_header *bmheader)
 
 	for (y=0;y<bmheader->h;y++) {
 
-		rowptr = &bmheader->raw_data[y * bytes_per_row * bmheader->nplanes];
+		rowptr = (signed char *) &bmheader->raw_data[y * bytes_per_row * bmheader->nplanes];
 
 		for (x=0,checkmask=0x80;x<bmheader->w;x++) {
 
@@ -792,7 +792,7 @@ int convert_ilbm_to_pbm(iff_bitmap_header *bmheader)
 	}
 
 	d_free(bmheader->raw_data);
-	bmheader->raw_data = new_data;
+	bmheader->raw_data = (unsigned char *) new_data;
 
 	bmheader->type = TYPE_PBM;
 
@@ -971,7 +971,7 @@ int iff_read_bitmap(char *ifilename,grs_bitmap *bm,int bitmap_type,ubyte *palett
 	ret = open_fake_file(ifilename,&ifile);		//read in entire file
 	if (ret == IFF_NO_ERROR) {
 		bm->bm_data = NULL;
-		ret = iff_parse_bitmap(&ifile,bm,bitmap_type,palette,NULL);
+		ret = iff_parse_bitmap(&ifile,bm,bitmap_type,(signed char *) palette,NULL);
 	}
 
 	if (ifile.data) d_free(ifile.data);
@@ -1353,7 +1353,7 @@ int iff_read_animbrush(char *ifilename,grs_bitmap **bm_list,int max_bitmaps,int 
 			MALLOC(bm_list[*n_bitmaps] , grs_bitmap, 1 );
 			bm_list[*n_bitmaps]->bm_data = NULL;
 
-			ret = iff_parse_bitmap(&ifile,bm_list[*n_bitmaps],form_type,*n_bitmaps>0?NULL:palette,prev_bm);
+			ret = iff_parse_bitmap(&ifile,bm_list[*n_bitmaps],form_type,*n_bitmaps>0?NULL:(signed char *)palette,prev_bm);
 
 			if (ret != IFF_NO_ERROR)
 				goto done;
