@@ -1,4 +1,4 @@
-/* $Id: inferno.c,v 1.85 2004-05-22 22:43:56 btb Exp $ */
+/* $Id: inferno.c,v 1.86 2004-08-01 16:28:33 schaffner Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -1824,7 +1824,7 @@ void show_order_form()
 #ifndef EDITOR
 
 	int pcx_error;
-	char title_pal[768];
+	unsigned char title_pal[768];
 	char	exit_screen[16];
 
 	gr_set_current_canvas( NULL );
